--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.2.0",
     "dotenv": "^16.3.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
